# ai-invention-40a89b-no-derivation-no-relation-a-closure-cert

./: README.md
round-1/dataset-1/src/: .terminal_claude_agent_struct_out.json  README.md  build_dataset.py  builders.py  common.py  counts.py  data.py  descriptive_counts.json  mini_data_out.json  overlap_table.json  preview_data_out.json  pyproject.toml
round-1/dataset-2/src/: .terminal_claude_agent_struct_out.json  README.md  data.py  method.py  mini_data_out.json  preview_data_out.json  pyproject.toml
round-1/dataset-2/src/qcn/: algebras.py
round-1/dataset-2/src/results/: dataset_metadata.json
round-1/dataset-2/src/tests/: test_qcn.py
round-1/experiment-2/src/: .terminal_claude_agent_struct_out.json  method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml
round-2/dataset-1/src/: .terminal_claude_agent_struct_out.json  README.md  data.py  mini_data_out.json  preview_data_out.json  pyproject.toml
round-2/dataset-1/src/results/: dataset_metadata.json
round-2/experiment-2/src/: .terminal_claude_agent_struct_out.json  README.md  allen_arm.py  method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml
round-3/experiment-1/src/: .terminal_claude_agent_struct_out.json  README.md  baselines.py  engine.py  full_method_out.json  method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml  readers.py
round-3/experiment-2/src/: .terminal_claude_agent_struct_out.json  README.md  full_method_out.json  llm.py  method.py  mini_method_out.json  preview_method_out.json  pyproject.toml
round-3/experiment-2/src/logs/: full.out  full.pid  full2.out  full2.pid  full3.out  full3.pid  mini.out  mini.pid  n80.out  n80.pid
round-3/experiment-2/src/results/: worked_collapse.pl  worked_modeA.pl
round-3/experiment-2/src/results_iter2/: full_method_out.json  worked_modeA.pl
round-3/experiment-3/src/: .terminal_claude_agent_struct_out.json  dataio.py  dev_pilot_out.json  dev_pilot_out2.json  engine.py  merge_arms.py  method.py  mini_method_out.json  mini_out.json  preview_method_out.json  pyproject.toml
round-3/experiment-3/src/logs/: full_run.out  full_run.pid  rcc8_run.out  rcc8_run.pid
round-4/evaluation-1/src/: .terminal_claude_agent_struct_out.json  eval.py  eval_digest.md  full_eval_out.json  mini_eval_out.json  per_query_records_temporal.json  preview_eval_out.json  pyproject.toml
round-4/evaluation-1/src/rerun_temporal/: llm.py  method.py
round-4/experiment-1/src/: .terminal_claude_agent_struct_out.json  README.md  allen_layer.py  gate.py  gate_diag.py  gate_diag2.py  logs_full.txt  method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml  synth_allen.py
round-4/experiment-1/src/results/: worked_intersection_0.pl  worked_intersection_1.pl  worked_intersection_2.pl
round-4/experiment-2/src/: .terminal_claude_agent_struct_out.json  README.md  figures.py  full_method_out.json  method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml
round-4/experiment-2/src/qcn/: verbalize.py
round-5/evaluation-1/src/: .terminal_claude_agent_struct_out.json  eval.py  eval_digest.md  eval_out.json  make_digest.py  mini_eval_out.json  preview_eval_out.json  pyproject.toml
round-5/experiment-1/src/: .terminal_claude_agent_struct_out.json  README.md  engine.py  full_method_out.json  gate_spatial.py  method.py  mini_method_out.json  preview_method_out.json  pyproject.toml  rcc8_layer.py  spatial_adapter.py  synth_rcc8.py  tests_rcc8.py
round-5/experiment-1/src/logs/: full_run.txt
round-5/experiment-1/src/results/: worked_collapse.pl  worked_real_closure_0.pl  worked_real_closure_1.pl  worked_synthetic_intersection.pl
round-5/experiment-1/src/src/: graphmetrics.py
round-5/experiment-2/src/: .terminal_claude_agent_struct_out.json  README.md  figures.py  full_method_out.json  method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml
round-5/experiment-2/src/qcn/: __init__.py  realize.py  topology.py
round-5/experiment-3/src/: .terminal_claude_agent_struct_out.json  README.md  figures.py  full_method_out.json  gate.py  method.py  method_out.json  mini_method_out.json  preview_method_out.json  probe.py  prolog_kinship.py  pyproject.toml  temporal_core.py  tests_kinship.py
round-5/experiment-3/src/pl/: _probe.pl  kin_clutrr_concat_1_Constance_Teresita.pl  kin_clutrr_concat_1_Madonna_Alfred.pl  kin_clutrr_concat_1_Marguerite_Maria.pl  (+112 more)
round-6/dataset-1/src/: .terminal_claude_agent_struct_out.json  README.md  assemble.py  build.py  clutrr_composition_table.json  data.py  mini_data_out.json  preview_data_out.json  probe.py  pyproject.toml  verify.py
round-6/experiment-1/src/: .terminal_claude_agent_struct_out.json  README.md  dataio.py  full_method_out.json  method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml  tests.py
round-7/dataset-1/src/: .terminal_claude_agent_struct_out.json  README.md  assemble.py  build.py  containment_composition_table.json  data.py  dataset_card.md  detok.py  mini_data_out.json  preview_data_out.json  pyproject.toml  verify.py
round-7/experiment-1/src/: .terminal_claude_agent_struct_out.json  README.md  full_method_out.json  llm.py  method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml  tests.py
round-8/experiment-1/src/: .terminal_claude_agent_struct_out.json  README.md  full_method_out.json  kinship.py  method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml  readers_locatedin.py
round-8/experiment-2/src/: .terminal_claude_agent_struct_out.json  README.md  full_method_out.json  method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml  tests.py
round-9/experiment-1/src/: .terminal_claude_agent_struct_out.json  README.md  booster.py  dataio_locatedin.py  dataio_redocred.py  kinship_pipeline.py  method.py  mini_method_out.json  preview_method_out.json  pyproject.toml  queryside_kinship.py  test_booster.py
(+471 files in other folders)
