[project]
name = "closure-cert-iter3-experiment-2"
version = "0.1.0"
description = "Closure-Certified Text-to-Logic iter-3: powered real-text temporal head-to-head (NarrativeTime+TDDMan), per-corpus read-soundness gate-crossing reconciliation, end-to-end SWI-Prolog discharge, $0 synthetic matched-coverage backstop."
requires-python = ">=3.12"
# Versions pinned to EXACTLY what is installed in .venv (verified via importlib.metadata).
# pandas was in the iter-2 pyproject but is NOT imported by any module and NOT installed here.
dependencies = [
    "numpy==2.4.6",
    "scipy==1.17.1",
    "networkx==3.6.1",
    "httpx==0.28.1",
    "loguru==0.7.3",
    "matplotlib==3.11.0",
    "jsonschema==4.26.0",
]
