[project]
name = "closurecert-reanalysis-eval"
version = "0.1.0"
description = "Zero-LLM-spend re-analysis eval (R1 bracketing CI, R2 CLUTRR coverage, 42.5% confident-wrong, contribution split)"
requires-python = ">=3.12"
dependencies = [
    "numpy==2.4.6",
    "scipy==1.17.1",
    "loguru==0.7.3",
]
