[project]
name = "redocred-kinship-corpus"
version = "1.0.0"
description = "Natural-Text Absent-Relation Kinship Corpus from Re-DocRED (+ DocRED secondary slice). Builds document-level kinship gold graphs (atomic readable edges, deduction-required multi-hop PRESENT queries, genuine ABSENT no-derivation pairs) standardized to the exp_sel_data_out schema; drop-in compatible with the CLUTRR kinship closure engine."
requires-python = ">=3.12"
dependencies = [
    "annotated-doc==0.0.4",
    "anyio==4.14.0",
    "certifi==2026.6.17",
    "charset-normalizer==3.4.7",
    "click==8.4.1",
    "filelock==3.29.4",
    "fsspec==2026.6.0",
    "h11==0.16.0",
    "hf-xet==1.5.1",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==1.19.0",
    "idna==3.18",
    "markdown-it-py==4.2.0",
    "mdurl==0.1.2",
    "packaging==26.2",
    "pip==25.0.1",
    "pygments==2.20.0",
    "pyyaml==6.0.3",
    "requests==2.34.2",
    "rich==15.0.0",
    "shellingham==1.5.4",
    "tqdm==4.68.3",
    "typer==0.25.1",
    "typing-extensions==4.15.0",
    "urllib3==2.7.0",
]

# Runtime note: the build/closure pipeline (data.py -> assemble.py -> build.py -> detok.py,
# kinship.py) uses ONLY the Python standard library. `huggingface-hub` (+ its transitive deps
# above) is required ONLY to download the raw Re-DocRED/DocRED json into temp/datasets/ when
# absent; once downloaded, the corpus is rebuilt with $0 spend and no third-party imports.
